# seng440

./: CMakeLists.txt  cachegrind.out.12059  cachegrind.out.13242  callgrind.out.10473  callgrind.out.12063  callgrind.out.12793  callgrind.out.13196  callgrind.out.hufe  charcount.c  hufd  hufd0.asm  hufd1.asm  hufd2.asm  hufd3.asm  hufe  hufe0.asm  hufe1.asm  hufe2.asm  huff_dec.c  huff_dec_0_unoptimized.c  huff_dec_1_pre_weights.c  huff_dec_2_cache.c  huff_dec_3_bits.c  huff_enc.c  huff_enc_0_unoptimized.c  huff_enc_1_pre_weights.c  huff_enc_2_cache.c  main.c  out.dot  proofOfConcept.c  test.sh  textToBits.c
lib/: sort.c
text/: dec.txt  enc.txt  enc_with_table.txt  in.txt  in_CAPS.txt
tree visualizer/: index.html  main.js
